welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  
  var nbr:Int=0
  
  for (pas<-0 to 5){
  	
    if (estSurBiscuit==false){
    	avance()
      nbr=nbr+1
    
  
  	}else{
      recule(nbr)
      return true
    }
  }
}
